--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -26,6 +26,7 @@
     </div>
     <nav>
       <ul>
+        <li><a href="/profile">Profile</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
