--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,20 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>cuddle</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" type="text/css" href="../static/css/base.css">
   {% block head %}
   
   {% endblock %}
 </head>
 <body>
-  <header>
     <nav>
       <ul>
         {% if user.is_authenticated %}
         <li><a href="/tips-catgory">Tips</a></li>
-        <li><a href="/profile">Profile</a></li>
+        <li><a href="/profile">Milestones</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="{% url 'logout' %}">Log out</a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
         <li><a href="{% url 'about' %}">About</a></li>
         <li><a href="{% url 'home' %}">Login</a></li>
@@ -26,7 +25,6 @@
       {% endif %}
       </ul>
     </nav>
-  </header>
   <main>
     {% block content %}
     {% endblock %}
