--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,222 +1,47 @@
-.cat-container {
-  padding: 35px 30px;
+
+
+.tips-img{
+  width: 90%;
+  padding: 2vmin;
+}
+.card{
+  border: 4px rgb(129, 203, 201) solid;
+  width: 45%;
+  margin: 15px;
+}
+section{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
- .tips-img{
-   width: 250px;
- }
-.cat-img {
-  width: 75%;
-  max-width: 350px;
-}
-
-.usr-img {
-  width: 100%;
-  border-radius: var(--card-border-radius);
-}
-
-.cat-details {
-  width: 98%;
-}
-
-.cat-actions {
-  margin-top: 20px;
-}
-
-.feedings-toy-container {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 20px;
-  align-items: center;
-}
-
-.subsection-title {
-  display: flex;
-  align-items: center;
-  margin-bottom: 12px;
-}
-
-.subsection-content {
-  margin: 0 8px;
-}
-
-
-
-.color-block {
-  opacity: 0.8;
-  height: 25px;
-  width: 25px;
-  margin-right: 10px;
-}
-
-
-.unfed,
-.no-toys {
-  color: var(--danger);
-}
-
-#green{
-  border: green;
-}
-
-
-.feedings-toy-container > section {
-  width: 80%;
-  min-width: 360px;
-  border: var(--borders);
-  border-radius: var(--card-border-radius);
-  padding: 10px;
-  box-shadow: var(--card-box-shadow);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.subsection-title img {
-  height: 42px;
-  margin-left: 8px;
-}
-
-.subsection-title img:first-of-type {
-  margin-left: 16px;
-}
-
-.feedings h2,
-.toys h2 {
-  font-size: 3.2rem;
-  margin: 0;
-}
-
-.feedings h3,
-.toys h3 {
-  font-size: var(--font-xl);
-  margin: 10px 0;
-}
-
-.subsection-content p,
-.subsection-content input,
-.subsection-content select {
-  font-size: var(--font-l);
-}
-
-.subsection-content input,
-.subsection-content select {
-  margin-left: 5px;
-  padding: 3px;
-}
-
-.feedings table {
-  width: calc(100% - 16px);
-  text-align: left;
-  border-collapse: collapse;
-  margin: 0 8px;
-}
-
-.feedings td {
-  padding: 8px 5px;
-  font-size: var(--font-reg);
-}
-
-.feedings th {
-  font-size: var(--font-l);
-  padding: 5px 5px 0;
-  border-bottom: rgb(36, 116, 248) solid 2px;
-}
-
-.feedings tr:nth-child(even) {
-  background-color: #f3f3fd;
-}
-
-.toy-container p {
-  margin: 12px 0;
-}
-
-.toy-container a {
-  text-decoration: none;
-  color: #111;
-}
-
-.toy-container .btn {
-  padding: 3px 10px;
-  margin-left: 10px;
-}
-
-#file-input {
-  overflow: hidden;
-  position: absolute;
-  width: 0.1px;
-  height: 0.1px;
-}
-
-#file-name {
-  margin-bottom: 10px;
-}
-
-@media only screen and (min-width: 768px) {
-  .cat-container {
-    padding: 35px 30px;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-  }
-
-  .cat-img {
-    width: 25%;
-    max-width: 250px;
-    margin-right: 25px;
-  }
-
-
-  .feedings-toy-container > section {
-    width: 45%;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  .feedings-toy-container {
-    padding: 0 40px;
-  }
-}
-
-.card-container {
-  padding: 0 30px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.card {
-  width: 400px;
+.catgory-page{
   margin: 20px;
-  border: var(--borders);
-  box-shadow: var(--card-box-shadow);
+  text-align: center;
 }
-
-.card-content {
-  padding: 10px;
-  width: 100%;
-}
-
-.usr-img {
-  width: 100%;
-  border-radius: var(--card-border-radius);
-}
-
-.card > a {
+section div h2{
+  color: rgb(244, 152, 184);
   text-decoration: none;
-  color: var(--text-color);
+}
+section div a{
+  text-decoration: none;
 }
 
-.card h2 {
-  margin: 10px 0;
-  font-size: var(--font-xl);
-}
+.milestone-card{
+  border: rgb(244, 152, 184) 3px solid;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;    
+  }
 
-.card p {
-  margin: 5px 0;
-  font-size: var(--font-reg);
+.milestone{
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  letter-spacing: 3px;
+  color:rgb(129, 203, 201) ;
+  font-size: 24px;
 }
