--- a/main_app/templates/profile/profile.html
+++ b/main_app/templates/profile/profile.html
@@ -8,39 +8,29 @@
 
 {% block content %}
 
-<section class="page-header">
-  <h1>profile</h1>
-  <a href="{% url 'milestone-create' %}">add milestone</a>
-</div>
-
-
-
-
-<table>
-  <thead>
-    <tr><th>Date</th><th>Age</th></tr>
-  </thead>
-  <tbody>
-    <h1>hello</h1>
-    {% for ms in milestone %}
-    <h1> {{ms.description}} <h1> 
-        <p>{{ms.date}}</p>
-        <p>{{ms.get_age_display}}</p>
-       <div class="milestone-img">
-        {% if ms.photo.url %}
-          <img 
-            src="{{ms.photo.url}}" 
-            alt="A photo of {{ms.name}}"
-            class="usr-img"
-          >
-        {% else %}
-          <a href="/profile/milestoneCreate/{{ms.id}}/">add photo</a>
-        {% endif %}
-      </div>
-    {% endfor %}
-  </tbody>
-</table>
+<section class="milestone">
+  <h1 id='milestone-header'>Milestones</h1>
+  
+  {% for ms in milestone %}
+  <div class='milestone-card'>
+  <h1> {{ms.description}} <h1> 
+    <p>{{ms.date}}</p>
+    <p>{{ms.get_age_display}}</p>
+    <div class="milestone-img">
+      {% if ms.photo.url %}
+      <img 
+      src="{{ms.photo.url}}" 
+      alt="A photo of {{ms.name}}"
+      class="usr-img"
+      >
+      {% else %}
+      <a href="/profile/milestoneCreate/{{ms.id}}/">add photo</a>
+      {% endif %}
+      {% endfor %}
+    </div>
+  </div>
+      <a href="{% url 'milestone-create' %}">add milestone</a>
 </section>
-</div>
+
 {% endblock %}
 
