--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href='../static/css/homee.css'/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/homee.css' %}"/>
 {% endblock %}
 
 {% block content %}
