--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
+
+{% endblock %} 
 
 {% block content %}
-
+<section class="about-page"> 
 <h1>About the Cuddle App</h1>
 <hr />
-<p>
-  app to track baby groth
-</p>
+<div class="about">
+  <ul>
+ <li> CUDDLE is an app designed to assist new parents in documenting the precious moments of their newborn by adding them to the milestone teacker, as well as providing them with advice through the tips section that is shared with all of the app's members.</li>
+ <li> The milestone tracker will assist parents in keeping track of their beloved child's development, and they will be able to upload photos to celebrate this special moment.</li>
+ <li> The tips section is divided into categories, which allows parents to choose which section they want to read tips from or which section they want to add tips to.</li>
+</ul>
+</div>
 
+</section>
 {% endblock %}
